tests/src/frontend/typechecking/invalid/frozen_lambda_7.sk
mutable class Foo<T>(mutable f: T)
fun no(f: Foo<() -> void>): void {
  freeze(f).f()
}
